--- a/web/src/style/app.scss
+++ b/web/src/style/app.scss
@@ -16,10 +16,13 @@
 $media-big: 980px;
 $media-small: 668px;
 $border-radius: 0.25em;
+$input-border-color: #a8a8a8;
 
-@import 'rc-select-mod';
+//@import '~css-reset-and-normalize/css/reset-and-normalize.min.css';
+@import '~css-reset-and-normalize/css/flavored-reset-and-normalize.min.css';
 @import '~react-datepicker/dist/react-datepicker.css';
 @import 'datepicker-mod';
+@import 'rc-select-mod';
 @import 'details-and-print';
 
 * {
@@ -27,26 +30,28 @@ $border-radius: 0.25em;
 }
 
 body {
-  font-family: 'Tahoma', sans-serif;
+  font-family: 'Courier', sans-serif;
   font-size: 16px;
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.004);
-  background-color: white;
 }
 
 /***************************************************************
  * Page
  */
 
-.page{}
+.page {
+  margin: 0 auto;
+  width: 80%;
+  margin-top: 60px;
+}
 
 .page__header {
 }
 
-.page__header__title {}
+.page__header__title {
+  font-weight: bold;
+  font-size: 1.3rem;
+  margin-bottom: 10px;
+}
 
 .content--max-width {
   width: 100%;
@@ -60,23 +65,22 @@ body {
   display: none;
 }
 
-
 /***************************************************************
  * Tabs
  */
 
-.tabs { }
+.tabs {
+}
 
 .tabs__button {
   border-radius: $border-radius;
+  border-style: solid;
+  border-width: 1px;
+  border-color: $input-border-color;
+  margin-right: 5px;
+  margin-bottom: 10px;
   height: 3em;
-  @media only screen and (max-width: $media-small) {
-    font-size: 0.7em;
-    font-weight: bold;
-    border-radius: 0;
-    height: 2em;
-    line-height: 0;
-  }
+  width: 140px;
 }
 
 .tabs__button__registration:after {
@@ -92,96 +96,121 @@ body {
   flex-direction: row;
   justify-content: space-between;
 
-  padding: 1em 4em 1em 4em;
   max-width: 800px;
 
-  border-width: 1px 0 0 0;
-   border-style: none;
-   border-color: grey;
-   padding: 0.7em 0 0 0;
- }
-
-
+  border: 1px none grey;
+  padding: 0.7em 0 0 0;
+}
 
 /***************************************************************
  * Form
  */
 
+.registration {
+  border: 1px solid lightgray;
+  border-radius: $border-radius;
+  padding: 0.7em 6px 0 6px;
+  width: 100%;
+
+}
+
 $font-size: 0.9em;
 
-.registration {
+.form {
   width: 100%;
 }
 
+.form__row {
+  display: flex;
+  flex-direction: row;
+  margin: 0 0 10px 0;
+}
 
-.registration__label {
+.form__fieldset {
+  border-radius: $border-radius;
+  border-style: solid;
+  border-width: 1px;
+  border-color: $input-border-color;
+}
+
+.form__label {
   font-size: $font-size;
+  margin: 0 15px 0 3px;
+
 }
 
 // Together with rc-select.scss: .rc-select-selection
-.registration__input {
-  border-radius: $border-radius;
-  font-size: 0.9em;
+.form__input {
 }
 
-.registration__input[type='date'] {
+.form__input__field {
+  font-size: 1em;
+  display: block;
+  height: 45px;
+  border-radius: $border-radius;
+  border: 1px solid $input-border-color;
+  padding: 0.6em;
+  width:100%;
+}
+
+.form__input[type='date'] {
   height: 2.9em;
 }
 
-.registration__input:focus {
+.form__input:focus {
   padding: 0.624rem;
 }
 
-.registration__radioab {
+.form__radioab {
   line-height: 1.9em;
   //margin-bottom: 0.3em;
 }
 
-.registration__radioab__input {
+.form__radioab__input {
   margin-right: 0.25em;
 }
 
-.registration--width-quarter {
+.form__row__input--width-quarter {
   width: 25%;
 }
 
-.registration--width-third {
+.form__row__input--width-third {
   width: percentage(1/3);
 }
 
-.registration--width-two-thirds {
+.form__row__input--width-two-thirds {
   width: percentage(2/3);
 }
 
-.registration--width-three-quarters {
+.form__row__input--width-three-quarters {
   width: 75%;
 }
 
-.registration--width-half {
+.form__row__input--width-half {
   width: 50%;
 }
 
-.registration--width-half {
-  width: 50%;
+.form__row__input--width-full {
+  width: 100%;
 }
 
-.registration--margin-right {
+.form__row__input--margin-right {
   margin-right: 0.3em;
 }
 
-.registration--can-grow {
+.form__row__input--can-grow {
   flex-grow: 1;
 }
 
-.registration--relative {
+.form__row__input--relative {
   position: relative;
 }
 
-.registration__input--error {
+.form__input--error {
   box-shadow: 0 0 2px red;
 }
 
-.registration__input__error-message {
+.form__input__error-message {
   font-size: 0.8em;
   display: block;
   color: red;
@@ -189,30 +218,30 @@ $font-size: 0.9em;
   margin: 5px 0 0 0;
 }
 
-.registration__info {
+.form__info {
   font-size: $font-size;
 }
 
-.registration__info__checkbox {
+.form__info__checkbox {
   font-size: $font-size;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.registration__info__checkbox__label {
+.form__info__checkbox__label {
   align-self: flex-end;
   margin-bottom: 0;
   margin-left: 1em;
 }
 
-.registration__info__label {
+.form__info__label {
   margin-bottom: 0.2em;
 }
 
-.registration__info__text {
+.form__info__text {
   //line-height: 3em;
-  border: 1px solid #a8a8a8;
+  border: 1px solid $input-border-color;
   border-radius: $border-radius;
   padding: 0.625rem;
   //padding: 0 0.9em 0 0.9em;
@@ -220,10 +249,17 @@ $font-size: 0.9em;
   min-height: 3em;
 }
 
-.registration__info--center {
+.form__info--center {
   text-align: center;
 }
 
+.form__button {
+  border-radius: $border-radius;
+  border: 1px solid $input-border-color;
+  margin: 0 5px 10px 0;
+  height: 3em;
+  width: 140px;
+}
 
 /***************************************************************
  * Selection component
@@ -232,7 +268,6 @@ $font-size: 0.9em;
 .selection {
   position: relative;
 }
-
 
 /***************************************************************
  * Pop-From-Top
@@ -290,38 +325,56 @@ $popFromTop-topPosition: -65px;
  * Table
  */
 
-.list__filter-input {
+.table__filter__input {
+  border-radius: $border-radius;
+  border: 1px solid $input-border-color;
+
   min-height: 0;
   line-height: 0;
-  border-radius: $border-radius;
   padding: 0.6em;
 }
 
-.list__td__font-color--light {
-  color: #6B6B6B;
+.table__body {
+  //table-layout: fixed;
+  margin: 20px 0 0 0;
+  cellpadding: 10px;
 }
 
-.list__thead--dark {
-  background-color: #CCCCCC;
+.table__body__header {
+  text-align: left;
+  display: inline-grid;
+  padding: 3px 3px;
 }
 
-.list__table__row--hoverable:hover {
-  outline: 1px solid cornflowerblue;
+.table__body__header__row {
+  font-size: 1.1em;
+  text-decoration: none;
 }
 
-.list__table__hrow {
-  font-size: 0.85em;
+.table__body__header__row__cell a {
+  text-decoration: none;
 }
 
-.list__table__hrow {
-  padding: 0 0.3em;
-}
-
-.list__table__row {
+.table__body__rows {
   font-size: 0.84em;
 }
 
-.table__row--cursor {
+.table__body__rows__row {
+  font-size: 1em;
+  padding: 0.3em 0.3em;
   cursor: pointer;
+}
+
+.table__body__rows__row:nth-child(even) {
+  background-color: #f2f2f2
+}
+
+.table__body__rows__row__cell {
+  border: 1px solid lightgray;
+  padding: 10px 10px;
+}
+
+.table__body__rows__row:hover {
+  outline: 1px solid cornflowerblue;
 }
 
