--- a/web/src/style/app.scss
+++ b/web/src/style/app.scss
@@ -107,9 +107,9 @@ body {
  */
 
 .registration {
-  border: 1px solid lightgray;
-  border-radius: $border-radius;
-  padding: 0.7em 6px 0 6px;
+  //border: 1px solid lightgray;
+  //border-radius: $border-radius;
+  //padding: 0.7em 6px 0 6px;
   width: 100%;
 
 }
