--- a/web/src/style/_details-and-print.scss
+++ b/web/src/style/_details-and-print.scss
@@ -21,7 +21,7 @@
 }
 
 .details__header {
-  font-size: 1em;
+  font-size: $font-size;
   font-weight: bold;
 }
 
@@ -30,7 +30,7 @@
 }
 
 .details__group-title {
-  font-size: 0.85em;
+  font-size: $font-size-small;
   font-weight: bold;
 }
 
@@ -45,7 +45,7 @@
 }
 
 .details__row-title, .details__row-value {
-  font-size: 0.75em;
+  font-size: $font-size-smaller;
   line-height: 1.4em;
 }
 
