--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -16,8 +16,7 @@
 //$image-path: "images/";
 $icon-font-path: "icons/";
 
-//@import '~css-reset-and-normalize/css/reset-and-normalize.min.css';
-@import '~css-reset-and-normalize/css/flavored-reset-and-normalize.min.css';
+@import "~normalize.css/normalize.css";
 
 @import "constants";
 @import "colors";
