--- a/src/style/_popfromtop.scss
+++ b/src/style/_popfromtop.scss
@@ -9,13 +9,14 @@ $popFromTop-topPosition: -65px;
 .pop-from-top {
   position: fixed;
   z-index: 200;
+  width:300px;
   top: $popFromTop-topPosition;
-  left: 0;
-  right: 0;
+  right: 5px;
   text-align: center;
   border-radius: 0;
   box-shadow: 0 0 5px black;
   opacity: 0.9;
+  background-color: palegreen;
 }
 
 .pop-from-top--slide-down {
@@ -38,14 +39,6 @@ $popFromTop-topPosition: -65px;
   }
   100% {
     top: $popFromTop-topPosition;
-  }
-}
-
-@keyframes pop-from-topHide {
-  0% {
-    top: 50px;
-  }
-  100% {
-    top: 0;
+    // top: 0;
   }
 }
